--- a/src/@vex/layout/toolbar/toolbar.component.html
+++ b/src/@vex/layout/toolbar/toolbar.component.html
@@ -9,30 +9,8 @@
      fxLayout="row"
      fxLayoutAlign="start center">
     <img class="w-8 select-none" src="assets/img/demo/logo.svg">
-    <h1 [fxHide]="mobileQuery" class="title ltr:pl-4 rtl:pr-4 m-0 select-none">VEX</h1>
+    <h1 [fxHide]="mobileQuery" class="title ltr:pl-4 rtl:pr-4 m-0 select-none">OFICINA5</h1>
   </a> 
-
-  <mat-menu #addNewMenu="matMenu" [overlapTrigger]="false" xPosition="after" yPosition="below">
-    <button mat-menu-item>
-      <mat-icon [icIcon]="icPersonAdd"></mat-icon>
-      <span>Add Contact</span>
-    </button>
-
-    <button mat-menu-item>
-      <mat-icon [icIcon]="icDoneAll"></mat-icon>
-      <span>Add Task</span>
-    </button>
-
-    <button mat-menu-item>
-      <mat-icon [icIcon]="icAssignmentTurnedIn"></mat-icon>
-      <span>Add Project</span>
-    </button>
-
-    <button [matMenuTriggerFor]="documentMenu" mat-menu-item>
-      <mat-icon [icIcon]="icBallot"></mat-icon>
-      <span>Add Document</span>
-    </button>
-  </mat-menu>
 
   <mat-menu #documentMenu="matMenu">
     <button mat-menu-item>
@@ -51,19 +29,7 @@
     </button>
   </mat-menu>
 
-  <div #megaMenuOriginRef class="ltr:ml-2 rtl:mr-2">
-    <button *ngIf="isHorizontalLayout$ | async"
-            [fxHide]="mobileQuery"
-            (click)="openMegaMenu(megaMenuOriginRef)"
-            color="primary"
-            mat-button
-            type="button">MEGA MENU
-      <ic-icon [icon]="icArrowDropDown" class="ltr:-mr-1 rtl:-ml-1" inline="true"></ic-icon>
-    </button>
-  </div>
-
-
-  <div *ngIf="(isVerticalLayout$ | async) && isNavbarInToolbar$ | async"
+   <div *ngIf="(isVerticalLayout$ | async) && isNavbarInToolbar$ | async"
        [fxHide]="mobileQuery"
        class="px-gutter"
        fxFlex="none"
