--- a/src/app/pages/pages/auth/login/login.component.html
+++ b/src/app/pages/pages/auth/login/login.component.html
@@ -15,12 +15,12 @@
       <div fxFlex="auto" fxLayout="column">
         <mat-form-field fxFlex="grow">
           <mat-label>E-Mail</mat-label>
-          <input formControlName="email" matInput required>
+          <input [(ngModel)]="usuario.nome" formControlName="email" matInput required>
           <mat-error *ngIf="form.get('email').hasError('required')">We need an email address to log you in</mat-error>
         </mat-form-field>
         <mat-form-field fxFlex="grow">
           <mat-label>Password</mat-label>
-          <input [type]="inputType" formControlName="password" matInput required>
+          <input [(ngModel)]="usuario.senha"[type]="inputType" formControlName="password" matInput required>
           <button (click)="toggleVisibility()" mat-icon-button matSuffix matTooltip="Toggle Visibility" type="button">
             <mat-icon *ngIf="visible" [icIcon]="icVisibility"></mat-icon>
             <mat-icon *ngIf="!visible" [icIcon]="icVisibilityOff"></mat-icon>
