--- a/src/app/pages/apps/aio-table/aio-table.component.html
+++ b/src/app/pages/apps/aio-table/aio-table.component.html
@@ -76,7 +76,8 @@
                 fxFlex="none"
                 mat-mini-fab
                 matTooltip="Add Customer"
-                type="button">
+                type="button"
+                >
           <mat-icon [icIcon]="icAdd"></mat-icon>
         </button>
       </div>
