--- a/src/app/pages/apps/aio-table/aio-table.component.html
+++ b/src/app/pages/apps/aio-table/aio-table.component.html
@@ -5,14 +5,10 @@
          [class.px-gutter]="layoutCtrl.value === 'fullwidth'"
          class="w-full flex flex-col sm:flex-row justify-between">
       <div>
-        <h1 class="title mt-0 mb-1">All-In-One Table</h1>
-        <vex-breadcrumbs [crumbs]="['Apps', 'All-In-One Table']"></vex-breadcrumbs>
-      </div>
+        <h1 class="title mt-0 mb-1">Produtos</h1>
+        <vex-breadcrumbs [crumbs]="['Produtos']"></vex-breadcrumbs>
+     </div>
 
-      <mat-button-toggle-group [formControl]="layoutCtrl" class="mt-4 sm:mt-0">
-        <mat-button-toggle value="boxed">BOXED</mat-button-toggle>
-        <mat-button-toggle value="fullwidth">FULL-WIDTH</mat-button-toggle>
-      </mat-button-toggle-group>
     </div>
   </vex-page-layout-header>
 
@@ -23,9 +19,9 @@
     <div class="card overflow-auto -mt-16">
       <div class="bg-app-bar px-6 h-16 border-b sticky left-0" fxLayout="row" fxLayoutAlign="start center">
         <h2 class="title my-0 ltr:pr-4 rtl:pl-4 ltr:mr-4 rtl:ml-4 ltr:border-r rtl:border-l" fxFlex="none" fxHide.xs>
-          <span *ngIf="selection.isEmpty()">Customers</span>
+          <span *ngIf="selection.isEmpty()">Products</span>
           <span *ngIf="selection.hasValue()">{{ selection.selected.length }}
-            Customer<span *ngIf="selection.selected.length > 1">s</span> selected</span>
+            Product<span *ngIf="selection.selected.length > 1">s</span> selected</span>
         </h2>
 
         <div *ngIf="selection.hasValue()" class="mr-4 pr-4 border-r" fxFlex="none">
@@ -82,7 +78,9 @@
         </button>
       </div>
 
-      <table @stagger [dataSource]="dataSource" class="w-full" mat-table matSort>
+      <table 
+      @stagger [dataSource]="products" 
+      class="w-full" mat-table matSort>
 
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
@@ -109,7 +107,7 @@
         <ng-container matColumnDef="image">
           <th *matHeaderCellDef mat-header-cell></th>
           <td *matCellDef="let row" class="w-8 min-w-8 pr-0" mat-cell>
-            <!-- <img [src]="row['imageSrc']" class="avatar h-8 w-8 align-middle"> -->
+            <img [src]="row['imageSrc']" class="avatar h-8 w-8 align-middle">
           </td>
         </ng-container>
 
@@ -186,7 +184,7 @@
           <th *matHeaderCellDef mat-header-cell mat-sort-header></th>
           <td *matCellDef="let row" class="w-10 text-secondary" mat-cell>
             <button (click)="$event.stopPropagation()"
-                    [matMenuTriggerData]="{ customer: row }"
+                    [matMenuTriggerData]="{ product: row }"
                     [matMenuTriggerFor]="actionsMenu"
                     mat-icon-button
                     type="button">
@@ -202,6 +200,7 @@
             class="hover:bg-hover trans-ease-out cursor-pointer"
             mat-row></tr>
       </table>
+    
 
       <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" class="sticky left-0"></mat-paginator>
     </div>
@@ -220,14 +219,15 @@
 </mat-menu>
 
 <mat-menu #actionsMenu="matMenu" xPosition="before" yPosition="below">
-  <ng-template let-customer="customer" matMenuContent>
-    <button (click)="updateCustomer(customer)" mat-menu-item>
+  <ng-template let-product="product" matMenuContent>
+    <button (click)="updateCustomer(product)" mat-menu-item>
       <mat-icon [icIcon]="icEdit"></mat-icon>
       <span>Modify</span>
     </button>
-    <button (click)="deleteCustomer(customer)" mat-menu-item>
+    <button (click)="deleteProduct(product)" mat-menu-item>
       <mat-icon [icIcon]="icDelete"></mat-icon>
       <span>Delete</span>
     </button>
   </ng-template>
 </mat-menu>
+
