add new product

--- a/src/app/pages/apps/aio-table/aio-table.component.html
+++ b/src/app/pages/apps/aio-table/aio-table.component.html
@@ -66,7 +66,7 @@
           <mat-icon [icIcon]="icFilterList"></mat-icon>
         </button>
 
-        <button (click)="createCustomer()"
+        <button (click)="createProduct()"
                 class="ml-4"
                 color="primary"
                 fxFlex="none"
