--- a/src/app/pages/apps/aio-table/customer-create/customer-create.component.html
+++ b/src/app/pages/apps/aio-table/customer-create/customer-create.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="save()" [formGroup]="form">
+<form (ngSubmit)="createProduct()" [formGroup]="form">
   <div fxLayout="row" fxLayoutAlign="start center" mat-dialog-title>
 
     <h2 *ngIf="form.get('nome').value"
@@ -30,7 +30,7 @@
       <mat-label>Pragas</mat-label>
       <input [(ngModel)]="pragas" formControlName="pragas" matInput>
 
-      <mat-icon [icIcon]="icEditLocation" class="mr-3" matPrefix></mat-icon>
+      <mat-icon [icIcon]="baselineBugReport" class="mr-3" matPrefix></mat-icon>
     </mat-form-field>
   
 
@@ -38,14 +38,14 @@
       <mat-label>QTD/PORÇÃO</mat-label>
       <input  [(ngModel)]="estoque" formControlName="estoque" matInput>
 
-      <mat-icon [icIcon]="icPhone" class="mr-3" matPrefix></mat-icon>
+      <mat-icon [icIcon]="baselineInsertChart" class="mr-3" matPrefix></mat-icon>
     </mat-form-field>
     
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close type="button">CANCEL</button>
-    <button *ngIf="isCreateMode()" color="primary" mat-button type="submit">CREATE CUSTOMER</button>
+    <button *ngIf="isCreateMode()" color="primary" mat-button type="submit">CREATE PRODUCT</button>
     </mat-dialog-actions>
 </form>
 
