--- a/src/app/pages/apps/aio-table/aio-table.component.html
+++ b/src/app/pages/apps/aio-table/aio-table.component.html
@@ -22,21 +22,7 @@
           <span *ngIf="selection.isEmpty()">Products</span>
           <span *ngIf="selection.hasValue()">{{ selection.selected.length }}
             Product<span *ngIf="selection.selected.length > 1">s</span> selected</span>
-        </h2>
-
-        <div *ngIf="selection.hasValue()" class="mr-4 pr-4 border-r" fxFlex="none">
-          <button (click)="deleteCustomers(selection.selected)"
-                  color="primary"
-                  mat-icon-button
-                  matTooltip="Delete selected"
-                  type="button">
-            <mat-icon [icIcon]="icDelete"></mat-icon>
-          </button>
-
-          <button color="primary" mat-icon-button matTooltip="Another action" type="button">
-            <mat-icon [icIcon]="icFolder"></mat-icon>
-          </button>
-        </div>
+        </h2>    
 
         <div class="bg-card rounded-full border px-4"
              fxFlex="400px"
@@ -71,7 +57,7 @@
                 color="primary"
                 fxFlex="none"
                 mat-mini-fab
-                matTooltip="Add Customer"
+                matTooltip="Add Product"
                 type="button"
                 >
           <mat-icon [icIcon]="icAdd"></mat-icon>
