--- a/src/app/pages/apps/aio-table/aio-table.component.html
+++ b/src/app/pages/apps/aio-table/aio-table.component.html
@@ -206,10 +206,12 @@
 
 <mat-menu #actionsMenu="matMenu" xPosition="before" yPosition="below">
   <ng-template let-product="product" matMenuContent>
-    <button (click)="updateCustomer(product)" mat-menu-item>
+    
+    <button (click)="updateCustomer(product)" routerLink="/apps/aio-table/products/update/{{product.id }}"mat-menu-item>
       <mat-icon [icIcon]="icEdit"></mat-icon>
       <span>Modify</span>
     </button>
+    
     <button (click)="deleteProduct(product)" mat-menu-item>
       <mat-icon [icIcon]="icDelete"></mat-icon>
       <span>Delete</span>
