--- a/src/app/pages/apps/aio-table/product-update/product-update.component.html
+++ b/src/app/pages/apps/aio-table/product-update/product-update.component.html
@@ -1,36 +1,52 @@
-<div>
-    <h2>Alterar Produto</h2>
-    <form>
-        <div>
-            <input 
-                formControlName="nome" matInput
-                [(ngModel)]="product.nome"
-                placeholder="Nome"
-               >
-        </div>
+<form (ngSubmit)="save()" [formGroup]="form">
+  <div fxLayout="row" fxLayoutAlign="start center" mat-dialog-title>
 
-        <div>
-            <input 
-                formControlName="pragas" matInput
-                [(ngModel)]="product.pragas"
-                placeholder="Pragas"
-               >
-        </div>
+    <h2 *ngIf="form.get('nome').value"
+        class="headline m-0"
+        fxFlex="auto">{{ form.get('nome').value }}</h2>
+    <h2 *ngIf="!form.get('nome').value"
+        class="headline m-0"
+        fxFlex="auto">New Product</h2>
+  
 
-        <div>
-            <input 
-                formControlName="estoque" matInput
-                [(ngModel)]="product.estoque"
-                placeholder="Estoque"
-               >
-        </div>
-        
-    </form>
-    <button mat-raised-button (click)="updateProduct()" color="primary">
-        Atualizar
+    <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
+      <mat-icon [icIcon]="icClose"></mat-icon>
     </button>
+  </div>
+
+  <mat-divider class="-mx-6 text-border"></mat-divider>
+
+  <mat-dialog-content fxLayout="column">
+    <div class="flex flex-col sm:flex-row">
+      <mat-form-field class="mt-6 flex-auto">
+        <mat-label>Nome</mat-label>
+        <input cdkFocusInitial formControlName="nome" matInput>
+
+        <mat-icon [icIcon]="icPerson" class="mr-3" matPrefix></mat-icon>
+      </mat-form-field>     
+    </div>
+
+    <mat-form-field class="flex-auto">
+      <mat-label>Pragas</mat-label>
+      <input formControlName="pragas" matInput>
+
+      <mat-icon [icIcon]="baselineBugReport" class="mr-3" matPrefix></mat-icon>
+    </mat-form-field>
+  
+
+    <mat-form-field class="flex-auto">
+      <mat-label>QTD/PORÇÃO</mat-label>
+      <input formControlName="estoque" matInput>
+
+      <mat-icon [icIcon]="baselineInsertChart" class="mr-3" matPrefix></mat-icon>
+    </mat-form-field>
     
-    <button mat-raised-button (click)="cancel()">
-        Cancelar
-    </button>
-</div>
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close type="button">CANCEL</button>
+    <button *ngIf="isUpdateMode()" color="primary" mat-button
+    type="submit">UPDATE PRODUCT</button>
+  </mat-dialog-actions>
+</form>
+
