--- a/src/app/pages/pages/auth/login/login.component.html
+++ b/src/app/pages/pages/auth/login/login.component.html
@@ -34,7 +34,7 @@
         <a [routerLink]="['/forgot-password']" class="caption">Esqueceu sua senha?</a>
       </div>
 
-      <button (click)="send()" color="primary" mat-raised-button type="button">
+      <button (click)="openDialog()" color="primary" mat-raised-button type="button">
         ENTRAR
       </button>      
     </div>
