--- a/src/app/pages/pages/auth/login/usermodal/usermodal.component.html
+++ b/src/app/pages/pages/auth/login/usermodal/usermodal.component.html
@@ -1,8 +1,17 @@
-<h1 mat-dialog-title>Ocorreu um erro</h1>
+<div
+  [icIcon]="bxErrorAlt" 
+  color="#F27474" width="80" height="80"
+  class="icon"  
+  align="center"
+  >
+</div>
+
+<div class="text" align="center">
+  <h1 mat-dialog-title>Ocorreu um erro</h1>
 <div mat-dialog-content>
     <mat-label>Entre com todos os dados corretamente!</mat-label>
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">OK</button>
+<div mat-dialog-actions align="center">
+  <button mat-raised-button color="primary" (click)="onNoClick()">OK</button>
 </div>
-
+</div>
