--- a/src/app/pages/apps/aio-table/aio-table.component.html
+++ b/src/app/pages/apps/aio-table/aio-table.component.html
@@ -154,8 +154,8 @@
       </table>
     
 
-      <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" class="sticky left-0"></mat-paginator>
     </div>
+    <mat-paginator  [pageSize]="pageSize" class="sticky left-0"></mat-paginator>
 
   </vex-page-layout-content>
 
